[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha-apis"
version = "0.2.0"
description = "Akasha external API adapter layer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["akasha_apis*"]
